# trojan-r

./: Cargo.toml
config/: client.toml  forward.toml  server.toml
src/: main.rs
src/proxy/: client.rs  forward.rs  mod.rs  server.rs
