[package]
name = "trojan-r"
version = "0.1.0"
authors = ["Page Fault <p4gefau1t@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
tokio = {version = "1.6", features = ["rt", "net", "io-util", "rt-multi-thread", "sync", "macros"]}
tokio-rustls = "0.26"
log = "0.4"
async-trait = "0.1"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] } 
env_logger = "0.11"
toml = "0.8"
clap = {version = "4", features= ["derive"]}
webpki = "0.22"
webpki-roots = "0.26"
tokio-tungstenite = "0.21"
futures-core = "0.3"
futures-util = "0.3"

[profile.release]
lto = true

[features]
# default = ["full"]
# client = []
# server = []
# forward = []
# full = ["client", "server", "forward"]